--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Release/
 minicom.cap
 *.ccxml
 ottos_api.lib
+tools/src/ihex2one
 applications/ottos_exec_test/lib/
 applications/ottos_ipcclient/
 applications/ottos_ipcserver/lib/
