added DS_store file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ applications/ottos_ipcserver/lib/
 applications/ottos_led_blinker/lib/
 applications/ottos_tty/lib/
 applications/ottos_ui/lib/
+.DS_store
